src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* body {
  font-family: "Amazon Ember Display", Arial, Helvetica, sans-serif;
} */

:root {
  --background: 0 0% 100%;
  --foreground: 222.2 84% 4.9%;
  --card: 0 0% 100%;
  --card-foreground: 222.2 84% 4.9%;
  --popover: 0 0% 100%;
  --popover-foreground: 222.2 84% 4.9%;
  --primary: 199 89% 39%;
  --primary-foreground: 0 0% 100%;
  --secondary: 25 95% 53%;
  --secondary-foreground: 0 0% 100%;
  --muted: 210 40% 96.1%;
  --muted-foreground: 215.4 16.3% 46.9%;
  --accent: 210 40% 96.1%;
  --accent-foreground: 222.2 47.4% 11.2%;
  --destructive: 0 84.2% 60.2%;
  --destructive-foreground: 210 40% 98%;
  --border: 214.3 31.8% 91.4%;
  --input: 214.3 31.8% 91.4%;
  --ring: 199 89% 39%;
  --radius: 0.5rem;
  --chart-1: 12 76% 61%;
  --chart-2: 173 58% 39%;
  --chart-3: 197 37% 24%;
  --chart-4: 43 74% 66%;
  --chart-5: 27 87% 67%;
}

.dark {
  --background: 222 47% 7%;
  --foreground: 213 31% 91%;
  --card: 222 47% 10%;
  --card-foreground: 213 31% 91%;
  --popover: 222 47% 10%;
  --popover-foreground: 213 31% 91%;
  --primary: 199 89% 48%;
  --primary-foreground: 222 47% 11%;
  --secondary: 25 95% 53%;
  --secondary-foreground: 222 47% 11%;
  --muted: 222 47% 15%;
  --muted-foreground: 215 20% 65%;
  --accent: 222 47% 20%;
  --accent-foreground: 213 31% 91%;
  --destructive: 0 63% 31%;
  --destructive-foreground: 213 31% 91%;
  --border: 222 47% 20%;
  --input: 222 47% 20%;
  --ring: 199 89% 48%;
  --chart-1: 220 70% 50%;
  --chart-2: 160 60% 45%;
  --chart-3: 30 80% 55%;
  --chart-4: 280 65% 60%;
  --chart-5: 340 75% 55%;
}

@layer base {
  * {
    @apply border-border;
  }

  body {
    @apply bg-background text-foreground;
  }
  :root {
    --sidebar-background: 0 0% 98%;
    --sidebar-foreground: 240 5.3% 26.1%;
    --sidebar-primary: 240 5.9% 10%;
    --sidebar-primary-foreground: 0 0% 98%;
    --sidebar-accent: 240 4.8% 95.9%;
    --sidebar-accent-foreground: 240 5.9% 10%;
    --sidebar-border: 220 13% 91%;
    --sidebar-ring: 217.2 91.2% 59.8%;
  }
  .dark {
    --sidebar-background: 240 5.9% 10%;
    --sidebar-foreground: 240 4.8% 95.9%;
    --sidebar-primary: 224.3 76.3% 48%;
    --sidebar-primary-foreground: 0 0% 100%;
    --sidebar-accent: 240 3.7% 15.9%;
    --sidebar-accent-foreground: 240 4.8% 95.9%;
    --sidebar-border: 240 3.7% 15.9%;
    --sidebar-ring: 217.2 91.2% 59.8%;
  }
}

.container-max {
  @apply max-w-[1444px] mx-auto px-4 sm:px-8;
 }

 @font-face {
  font-family: "Amazon Ember Display";
  src: url("/fonts/amazon-ember/Amazon_Ember_Bold.ttf") format("truetype");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
 }
 
 @font-face {
  font-family: "Amazon Ember Display";
  src: url("/fonts/amazon-ember/Amazon_Ember_Bold.ttf") format("truetype");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
 }

